--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@ Mozilla presents an HTML5 mini-MMORPG by Little Workshop http://www.littleworksh
         <meta property="og:description" content="Play Mozilla's BrowserQuest, an HTML5 massively multiplayer game demo powered by WebSockets!">
         <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/achievements.css" type="text/css">
-        <script src="js/lib/modernizr.js" type="text/javascript"></script>
+        <script src="/js/lib/modernizr.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
 
         <!--[if lt IE 9]>
@@ -46,6 +46,7 @@ Mozilla presents an HTML5 mini-MMORPG by Little Workshop http://www.littleworksh
 	<body class="intro upscaled">
     <![endif]-->
 	<body class="intro">
+        <script src="/js/lib/underscore.min.js"></script>
 	    <noscript>
 	       <div class="alert">
 	           You need to enable JavaScript to play BrowserQuest.
@@ -201,7 +202,7 @@ Mozilla presents an HTML5 mini-MMORPG by Little Workshop http://www.littleworksh
           	               <span class="right-ornament"></span>
                          </h1>
                          <p>
-                             We're sorry, but your browser does not support WebSockets.<br>
+                             We re sorry, but your browser does not support WebSockets.<br>
                              In order to play, we recommend using the latest version of Firefox, Chrome or Safari.
                          </p>
                     </article>
